--- a/index.html
+++ b/index.html
@@ -1,51 +1,89 @@
-<html>
+<!DOCTYPE html>
+<html data-bs-theme="light" lang="en">
+
 <head>
-<style>
-body {
-    background: lightgreen;
-    font-family: Verdana;
-}  
-#content {
-    background: lightyellow;
-    min-width: 200px;
-    max-width: 500px;
-    padding: 50px;
-    margin: auto;
-    margin-top: -50px;
-    line-height: 150%;
-}
-h1 {
-    letter-spacing: 2px;
-    font-size: 16px;
-    text-align: center;
-}
-h2 {
-    font-size: 14px;
-    text-align: center;
-}
-h3 {
-    font-size: 12px;
-}
-</style>
-</head>    
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Home - Tai</title>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i&amp;display=swap">
+</head>
+
 <body>
-    <div id="content">
-        <h1>Tai Thibault</h1>
-        <h2>Freshman in Greenville, South Carolina</h2>
-        
-         <p>I am a freshman at Bob Jones University majoring in Biblical studies.</p>
-         <p>
-            I attend Grace Bible Church in Dracut MA. You can email me  
-            <a href="mailto:sgothard@bju.edu">here</a>.
-         </p> 
-         <p>
-            I enjoy listening to podcasts, debates, music and having deep conversations.
-         </p>
-        <h3>EDUCATION</h3>
-        Biblical Studies<br />
-        Bob Jones University<br />
-        Example image:
-        <img src="https://cs.bju.edu/media/bju-math-division/bju-computer-science/site-assets/images/cs-logo-main.png" />
-    </div>
+    <nav class="navbar navbar-expand-lg fixed-top bg-dark navbar-custom navbar-dark">
+        <div class="container"><a class="navbar-brand" href="#">Tai Thibault</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarResponsive"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#">Sign Up</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Log In</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <header class="text-center text-white masthead">
+        <div class="masthead-content">
+            <div class="container">
+                <h1 class="masthead-heading mb-0">Biblical studies major&nbsp;</h1>
+                <h2 class="masthead-subheading mb-0">Tai Thibault</h2>
+            </div>
+        </div>
+        <div class="bg-circle-1 bg-circle"></div>
+        <div class="bg-circle-2 bg-circle"></div>
+        <div class="bg-circle-3 bg-circle"></div>
+        <div class="bg-circle-4 bg-circle"></div>
+    </header>
+    <section>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5"><img class="rounded-circle img-fluid" src="assets/img/bju_logo_512.png"></div>
+                </div>
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5">
+                        <h2 class="display-4">Focus on Apologetics and Biblical worldview</h2>
+                        <p>I am majoring in Biblical studies&nbsp; at Bob Jones University with a particular focus on Apologetics and Biblical worldview.&nbsp;&nbsp;</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5"><img class="rounded-circle img-fluid" src="assets/img/Luce_mascot.png"></div>
+                </div>
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5">
+                        <h2 class="display-4">Missions work to the cults</h2>
+                        <p>The lord has directed my path thus far in the direction of evangelism to the cults of Christianity with a particular focus on Mormonism and Jehovah's Witnesses.&nbsp;&nbsp;</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5"><img class="rounded-circle img-fluid" src="assets/img/eec61518bf660342aee5b2dc6f590a63.jpg"></div>
+                </div>
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5">
+                        <h2 class="display-4">Put that onto my account</h2>
+                        <p>My favorite Bible verse is Philemon 1:18 which says:<br><span style="color: rgb(0, 0, 0);">"If he has wronged you in any way, or owes you anything, charge that to my account."</span><br><br>&nbsp;</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="py-5 bg-black">
+        <div class="container">
+            <p class="text-center text-white m-0 small">Copyright&nbsp;© Tai 2024</p>
+        </div>
+    </footer>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
+
 </html>
